<resources>
    <string name="app_name">"\u004D""\u00B3"</string>
    <string name="help_screen_one">Monitor My Mortgage</string>
    <string name="SenderId">834063826805</string>
    <string name="intercom_gcm_sender_id">1071183795665</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="fa_photo">{fa-image}</string>
    <string name="fa_paperclip_mortgage_documents">{fa-paperclip}</string>
    <string name="fa_angle_right">{fa-angle-right}</string>
    <string name="okay">Okay</string>
    <string name="email">Email</string>
    <string name="app_notification">App Notification</string>
    <string name="sms_notification">SMS Notification</string>
    <string name="user_already_exist_with_email">User already exists with email address</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="reminder">Reminder</string>
    <string name="ok">Ok</string>
    <string name="please_wait">Please wait...</string>
    <string name="loading_mortgage_list">Loading Mortgage List</string>
    <string name="google">Google</string>
    <string name="current_interest_rate_calculation">Current Interest Rate Calculation</string>
    <string name="current_interest_rate">Current Interest Rate</string>
    <string name="current_prime_rate">Current Prime Rate</string>
    <string name="prime_rate_adjustment">Prime Rate Adjustment </string>
    <string name="your_mortgage_can_be_accessed">Your mortgage can be accessed </string>
    <string name="from_the_dashboard">from the dashboard.</string>
    <string name="done">Done</string>
    <string name="code">Code</string>
    <string name="enter_new_password_hint">Enter New Password</string>
    <string name="repeate_new_password_hint">Repeat New Password</string>
    <string name="code_sent">We have sent a verification code to your registered Mobile Number and Email.</string>
    <string name="enter_code_message">Please enter the code to verify your account and continue.</string>
    <string name="enter_reg_number">Enter your Email or Mobile number registered with Monitor My Mortgage.</string>
    <string name="enter_reg_number_email">Enter Registered Email or Mobile Number</string>
    <string name="mortgage_documents">Mortgage Documents</string>
    <string name="didnot_receive">Didn\'t receive?</string>
    <string name="resend_code">Resend Code</string>
    <string name="and">&#160;and&#160;</string>
    <string name="read_agree_to">I have read and agree to the</string>
    <string name="sending_sms">Sending SMS</string>
    <string name="email_phone_exist">Email or Phone Number already exist.</string>
    <string name="error">Error</string>
    <string name="close_help">Close Help</string>
    <string name="no_network_found">No network found!</string>
    <string name="monitor_my_mortgage_link">www.MonitorMyMortgage.com</string>
    <string name="how_would_you_like_to_start">How would you like to start?</string>
    <string name="tell_us_about_mortgage">Tell us about your \n existing mortgage.</string>
    <string name="tell_us_about_requirments">Tell us your requirements \n &#160;&#160;&#160;&#160;&#160;and get a quote.</string>
    <string name="mortgage_limit_message">Your account has 5 mortgages. You cannot add new mortgage.</string>
    <string name="mortgage_limit_reached">Mortgage count limit reached</string>
    <string name="email_already_exists">Entered Email already exists.</string>
    <string name="phone_already_exist">Phone number already exist.</string>
    <string name="phone">Phone</string>
    <string name="both">Both</string>
    <string name="select_opp_pref_error_msg">Please select Opportunity Notification Preference.</string>
    <string name="email_app_sms">Email, App Notification, SMS Notification</string>
    <string name="email_app">Email, App Notification</string>
    <string name="app_sms">App Notification, SMS Notification</string>
    <string name="email_sms">Email, SMS Notification</string>
    <string name="edit_mortgage_restriction">You cannot make changes to this mortgage as Broker response is pending for the identified opportunity.</string>
    <string name="months">&#160;Months</string>
    <string name="mth">&#160;Mth</string>
    <string name="yr">&#160;Yr</string>
    <string name="year">&#160;Year</string>
    <string name="years">&#160;Years</string>
    <string name="we_found_better_option_for_your_mortgage">We found a better option for your&#160;</string>
    <string name="mortgage">&#160;mortgage.</string>
    <string name="reminded_about_this">You will be reminded about this opportunity \n again after a week.</string>
    <string name="remindar_already_set">Reminder is already set. You will be reminded about this opportunity on date &#160;</string>
    <string name="deatils_shared_with_broker">The Broker has viewed your opportunity details and will contact you shortly.</string>
    <string name="broker_already_contacted">Broker Already Contacted</string>
    <string name="mortgage_idetified"> &#160;has identified this mortgage is within&#160;</string>
    <string name="days_of_maturiity">&#160;days of maturity.</string>
    <string name="select_contact_prefernce">Please select Contact Preference.</string>
    <string name="broker_will_contact_shortly">Our Mortgage Broker will \n contact you shortly.</string>
    <string name="request_sent">Request Sent</string>
    <string name="select_best_fixed_rate">Select Best Fixed Rate</string>
    <string name="select_best_variable_rate">Select Best Variable Rate</string>
    <string name="remindar">&#160;Reminder</string>
    <string name="available">&#160;Available</string>
    <string name="opportunity">&#160;Opportunity</string>
    <string name="file_upload_limit">You can upload files upto 5 MB.</string>
    <string name="supported_file_formats">Supported file types: .jpg, .png, .pdf, .gif.</string>
    <string name="step_one">Step 1</string>
    <string name="step_two">Step 2</string>
    <string name="step_three">Step 3</string>
    <string name="select_lendar">Select Lender</string>
    <string name="canadian_dollars">Canadian Dollars</string>
    <string name="enter_in_months_hint">Enter in Months</string>
    <string name="enter_period_hint">Enter Period</string>
    <string name="select_frequency_hint">Select Frequency</string>
    <string name="select_term">Select Term</string>
    <string name="select_type">Select Type</string>
    <string name="fixed">Fixed</string>
    <string name="optional">&#160;(Optional)</string>
    <string name="original">&#160;(Original)</string>
    <string name="select_date">Select Date</string>
    <string name="ten_bps">10 bps</string>
    <string name="one_twenty_days_until_maturity">120 Days Until Maturity</string>
    <string name="take_picture">Take a Picture</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_m3_signin">Monitor My Mortgage </string>
    <string name="continue_with">Continue With</string>
    <string name="facebook">Facebook</string>
    <string name="username_hint">Email or Phone Number</string>
    <string name="password_hint">Password</string>
    <string name="forgot_or_reset_password">Forgot/Reset Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">New User?</string>
    <string name="create_M3_account">Create "\u004D""\u00B3" Account</string>
    <string name="create_my_account">Create My Account</string>
    <string name="register_with_facebook">Register with Facebook</string>
    <string name="fa_facebook">{fa-facebook-official} &#160;&#160;Facebook  </string>
    <string name="fa_facebook_square">{fa-facebook-square}&#160;&#160;&#160;&#160;&#160;&#160;&#160;Facebook  </string>
    <string name="alert_close_button">{fa-remove}</string>
    <string name="fa_info_circle_week">Weak  {fa-info-circle}</string>
    <string name="fa_info_circle_strong">Strong  {fa-info-circle}</string>
    <string name="fa_info_circle_very_strong">Very Strong</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_create_new_account">Create My Account</string>
    <string name="action_icon">M3 Icon</string>
    <string name="alert_dialog_message">A Mortgage Broker will contact you  by December 10,2015</string>
    <string name="alert_username_empty">Please enter your Email or Phone Number.</string>
    <string name="alert_password_empty">Please enter Password.</string>
    <string name="alert_invalid_email">Entered Email or Phone Number or Password is incorrect.</string>
    <string name="alert_login_successful">Login Successful</string>
    <string name="password_hint_error_message">Password must be at least 8 characters, with at least one number and one uppercase character. e.g. Password1 instead of password.</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_email">Confirm Email</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_postal_code">Postal Code</string>
    <string name="submit_button">Submit</string>
    <string name="edit_button">Edit</string>
    <string name="back_to_dashboard">Back to Dashboard</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="privacy_policy"><u>Privacy Policy.</u></string>
    <string name="terms_condition"><u>Terms &amp; Conditions</u></string>
    <string name="add_mortgage">{fa-plus-circle}&#160;&#160;Add Mortgage</string>
    <string name="request_quote">{fa-file-text}&#160;&#160;Request a Quote</string>
    <string name="notification_setting">{fa-gear}&#160;&#160; Notification Settings</string>
    <string name="current_rate">Current Rate</string>
    <string name="last_update">Last Update</string>
    <string name="next_update">Next Update</string>
    <string name="saving_per_month">Min. Savings Target/Month</string>
    <string name="saving_over_remaining_term">Min. Savings Over Remaining Term</string>
    <string name="add_mortgage_mpac">MPAC# Number</string>
    <string name="attach_mortgage_document">Attach Mortgage Documents</string>
    <string name="rate_increase">Rate Increase</string>
    <string name="notify_me">Notify Me</string>
    <string name="fa_caret_down">{fa-caret-down}</string>
    <string name="fa_caret_downnew">&#xf0d7;</string>
    <string name="fa_plus_circle">{fa-plus-circle}</string>
    <string name="fa_file_text">{ fa-file-text-o}</string>
    <string name="nighty_days_until_maturity">90 Days Until Maturity</string>
    <string name="onetwenty_days_until_maturity">120 Days Until Maturity</string>
    <string name="onefifty_days_until_maturity">180 Days Until Maturity</string>
    <string name="opportunity_notification_prefernces">Opportunity Notification Preference</string>
    <string name="contact_preferneces">Contact Preference</string>
    <string name="title_add_mortgage">Title</string>
    <string name="title_add_mortgage_new">Property Name</string>
    <string name="secure">Secure</string>
    <string name="mobile">Mobile</string>
    <string name="easy_to_use">Easy to Use</string>
    <string name="view_now">View Now</string>
    <string name="view_later">View Later</string>
    <string name="requestquote_popup_message_one">Please let us know what type of Mortgage you</string>
    <string name="requestquote_popup_message_two">need so we can provide better options.</string>
    <string name="pre_approval">Pre-Approval</string>
    <string name="purchase">Purchase</string>
</resources>